--- a/main.html
+++ b/main.html
@@ -10,7 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+ <h1>Switzerland</h1>
+	<br>
+	<p>
+		Switzerland is a mountainous Central European country, home to numerous lakes, villages and the high peaks of the Alps. Its cities contain medieval quarters, with landmarks like capital Bern’s Zytglogge clock tower and Lucerne’s wooden chapel bridge. The country is also known for its ski resorts and hiking trails. 
+	</p>
+	<ol>
+		<li><b><i>Matterhorn - Symbol for Switzerland</i></b></li>
+		<li><b><i>The Rhine Falls</i></b></li>
+		<li><b><i>Aletsch - the Largest Alpine Glacier.</i></b></li>
+		<li><b><i>Creux du Van – Natural Spectacle.</i></b></li>
+		<li><b><i>Jungfraujoch.</i></b></li>
+	</ol>
+	<ul>
+		<li><b><i>Matterhorn - Symbol for Switzerland</i></b></li>
+		<li><b><i>The Rhine Falls</i></b></li>
+		<li><b><i>Aletsch - the Largest Alpine Glacier.</i></b></li>
+		<li><b><i>Creux du Van – Natural Spectacle.</i></b></li>
+	</ul>
 </body>
 
 </html>
